--- a/Project.toml
+++ b/Project.toml
@@ -3,10 +3,18 @@ uuid = "3bfb738b-dcde-48ea-949f-aba7ce839dc7"
 authors = ["August Brandberg"]
 version = "0.1.0"
 
+[deps]
+DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+NaNStatistics = "b946abbf-3ea7-4610-9019-9858bfdeaf2d"
+Optim = "429524aa-4258-5aef-a3af-852621145aeb"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+
 [compat]
 julia = "1.6"
 
 [extras]
+CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
