--- a/Project.toml
+++ b/Project.toml
@@ -12,13 +12,14 @@ NaNStatistics = "b946abbf-3ea7-4610-9019-9858bfdeaf2d"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 
 [compat]
-DataFrames = "1"
 CSV = "0.10"
+DataFrames = "1"
 Distributions = "0.25"
-Optim = "1"
 NaNStatistics = "0.6"
+Optim = "1"
 Plots = "1"
 julia = "1.7"
 
