--- a/Project.toml
+++ b/Project.toml
@@ -20,7 +20,7 @@ DataFrames = "1.4.0"
 Distributions = "0.25"
 NaNStatistics = "0.6"
 Optim = "1"
-Plots = "1"
+Plots = "1 - 1.36.6"
 StatsPlots = "0.15"
 julia = "1.7"
 
